--- a/flask_menger/templates/menger/index.html
+++ b/flask_menger/templates/menger/index.html
@@ -135,13 +135,17 @@
             <table class="table table-hover">
               <thead data-bind="foreach: {data: headers, as: 'row'}">
                 <tr data-bind="foreach: row">
-                  <th data-bind="text: name, attr: {'colspan': colspan}, css: $root.type(offset)"></th>
+                  <th data-bind="text: name, attr: {'colspan': colspan},
+                                 css: {'measure': $root.is_msr(offset), 'sorted': sorted},
+                                 click: $root.change_sort.bind($root)"></th>
                 </tr>
               </thead>
 
               <tbody data-bind="foreach: {data: get_data, as: 'line'}">
                 <tr data-bind="foreach: line">
-                  <td data-bind="text: line[$index()], css: $root.type($index())"></td>
+                  <td data-bind="text: line[$index()],
+                                 css: {'measure': $root.is_msr($index())}"></td>
+
                 </tr>
               </tbody>
 
