Add limit widget

--- a/flask_menger/templates/menger/index.html
+++ b/flask_menger/templates/menger/index.html
@@ -79,6 +79,13 @@
       </label>
     </div>
     <div class="form-group">
+      <label class="checkbox-inline">
+        Limit
+        <input type="text"
+               data-bind="value:limit">
+      </label>
+    </div>
+    <div class="form-group">
       <a type="button" class="btn btn-default"
          href="#" title="Dowload Excel file"
          data-bind="click: get_xlsx">
